Fix spacing issue with image-preview class

--- a/src/style.scss
+++ b/src/style.scss
@@ -404,6 +404,7 @@
         overflow: hidden;
         background-color: #f9f9f9;
         margin-left: 10px;
+        margin-right : 8px;
         position: relative;
         display: flex;
         align-items: center;
